Fix palataforms typo

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               </p>
               <p>Frontend Developer</p>
               <p class="description">
-                As a frontend developer I worked on several internal management web applications and public web applications like Zonza.tv. Whilst working on these projects we enhanced the plataforms looks and feel using technologies such as HTML5, CSS3, Javascript and frameworks JS like jQuery, RequireJS and BackboneJS. Also I provided my point of view about the design of both platforms. I was also part of the team who built <a href="http://www.copycentral.co.uk">Copycentral</a>, a new advertising clearance system, being its lead frontend developer.
+                As a frontend developer I worked on several internal management web applications and public web applications like Zonza.tv. Whilst working on these projects we enhanced the platforms looks and feel using technologies such as HTML5, CSS3, Javascript and frameworks JS like jQuery, RequireJS and BackboneJS. Also I provided my point of view about the design of both platforms. I was also part of the team who built <a href="http://www.copycentral.co.uk">Copycentral</a>, a new advertising clearance system, being its lead frontend developer.
               </p>
             </li>
             <li>
