--- a/index.html
+++ b/index.html
@@ -90,15 +90,13 @@
   <!-- CONTAINER -->
   <div class="content" ng-controller="ghCntrl">
 
-    <p class="content--description">
+    <!-- <p class="content--description">
       'Hi there! I am an enthusiastic <span class="content--description__highlight">frontend developer</span> currently living in <span class="content--description__highlight">London, UK</span>. I really love to code in <span class="content--description__highlight">JavaScript</span> whilst using <span class="content--description__highlight">CSS</span> to get a great look &amp; feel. If you want to know more about me&hellip; keep reading!'
 
-      <!-- 
         Block with: avatar_url, n. public repos, n. public gists, n. followers, n. following
         Block with: location, email, blog (url), updated at.
-      -->
 
-      <div class="user-details--github">
+      <div class="user-details">
         <img class="user-details--avatar" ng-src="{{user.avatar}}" alt="{{user.name}} avatar" />
         <span class="user-details--repos">{{user.publicRepos}} Repos public</span>
         <span class="user-details--gists">{{user.publicGists}} Gists public</span>
@@ -106,13 +104,14 @@
         <span class="user-details--following">{{user.following}} Following</span>
       </div>
 
-      <div class="user-details--contact">
+      <div class="user-details">
         <span class="user-details--location">{{user.location}}</span>
         <span class="user-details--email">{{user.email}}</span>
         <span class="user-details--url">{{user.url}}</span>
         <span class="user-details--updated">{{user.updated}}</span>
       </div>
-    </p>
+
+    </p> -->
     
     <section class="content--section github">
 
