adding experience and skills

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<!--           
+<!--
      rosadurante.com
      author: Rosa Durante <me@rosadurante.com>
 -->
@@ -90,30 +90,153 @@
   <!-- CONTAINER -->
   <div class="content" ng-controller="ghCntrl">
 
-    <!-- <p class="content--description">
-      'Hi there! I am an enthusiastic <span class="content--description__highlight">frontend developer</span> currently living in <span class="content--description__highlight">London, UK</span>. I really love to code in <span class="content--description__highlight">JavaScript</span> whilst using <span class="content--description__highlight">CSS</span> to get a great look &amp; feel. If you want to know more about me&hellip; keep reading!'
+     <p class="content--description">
+      'Hi there! I am an enthusiastic <span class="content--description__highlight">frontend developer</span> currently living in <span class="content--description__highlight">Jerez de la Frontera, Spain</span>. I really love to code in <span class="content--description__highlight">JavaScript</span> whilst using <span class="content--description__highlight">CSS</span> to get a great look &amp; feel. If you want to know more about me&hellip; keep reading!'
+    </p>
 
-        Block with: avatar_url, n. public repos, n. public gists, n. followers, n. following
-        Block with: location, email, blog (url), updated at.
+    <section class="content--section experience">
+      <header class="content--section--header experience--header">
+        <h3 class="content--section--title">Experience</h3>
+      </header>
 
-      <div class="user-details">
-        <img class="user-details--avatar" ng-src="{{user.avatar}}" alt="{{user.name}} avatar" />
-        <span class="user-details--repos">{{user.publicRepos}} Repos public</span>
-        <span class="user-details--gists">{{user.publicGists}} Gists public</span>
-        <span class="user-details--followers">{{user.followers}} Followers</span>
-        <span class="user-details--following">{{user.following}} Following</span>
+      <ul class="content--section--list experience--list">
+       <li class="experience--item">
+          <span class="experience--date">Jan 2015 - Present</span>
+          <p class="experience--place">
+            <a class="experience--link" href="http://p.ota.to/" target="_blank">Potato Ltd</a>
+          </p>
+          <p class="experience--position">Frontend Developer</p>
+          <p class="description experience--description">
+            At Potato, I am working on several different projects: from big web applications backend-heavy improving my knowledge in AngularJS as well as Python/Django to very light web pages maily frontend using latest features of CSS3, animations and also introducing ES6.
+          </p>
+        </li>
+
+        <li class="experience--item">
+          <span class="experience--date">Jul 2014 - Dec 2014</span>
+          <p class="experience--place">
+            <a class="experience--link" href="http://www.bynd.com/" target="_blank">Beyond Ltd</a>
+          </p>
+          <p class="experience--position">Frontend Developer</p>
+          <p class="description experience--description">
+            I am part of the <a class="experience--link" href="http://advertising.apple.com/" target="_blank">iAds</a> team within Beyond where I have been building tiny advertisment projects for Apple devices. They are built based on HTML/CSS/JS which required lots of different CSS animations and some JS Canvas for those that were games.
+          </p>
+        </li>
+
+        <li class="experience--item">
+          <span class="experience--date">Nov 2013 - Jul 2014</span>
+          <p class="experience--place"><span>Yourvine Ltd</span></p>
+          <p class="experience--position">Frontend Developer</p>
+          <p class="description experience--description">
+            I started working at Yourvine as a Frontend Engineer, building <span>yourvine.com</span>. The platform is a single-page web application which is written using AngularJS in frontend and Python/Django as backend, following a strong OO programming and a service-orientation design pattern. I have been working in a very small team using Agile methodology to organise and plan every week. I also made a large amount of contributions to the backend improving my skills with Python/Django.
+          </p>
+        </li>
+
+        <li class="experience--item">
+          <span class="experience--date">Feb 2012 - Nov 2013</span>
+          <p class="experience--place">
+            <a class="experience--link" href="http://www.hogarthww.com/" target="_blank">Hogarth Worldwide Ltd</a>
+          </p>
+          <p class="experience--position">Frontend Developer</p>
+          <p class="description experience--description">
+            As a frontend developer I worked on several internal management web applications and public web applications like Zonza.tv. Whilst working on these projects we enhanced the plataforms looks and feel using technologies such as HTML5, CSS3, Javascript and frameworks JS like jQuery, RequireJS and BackboneJS. Also I provided my point of view about the design of both platforms. I was also part of the team who built <a class="experience--link" href="http://www.copycentral.co.uk">Copycentral</a>, a new advertising clearance system, being its lead frontend developer.
+          </p>
+        </li>
+
+        <li class="experience--item">
+          <span class="experience--date">Jun 2011 - Feb 2012</span>
+          <p class="experience--place"><span>Zocolab project</span></p>
+          <p class="experience--position">Frontend and Android developer</p>
+          <p class="description experience--description">
+            As co-founder of this project of start-up, I worked on several different aspects; firstly, I did the design and front-end developement of our web page, using Django as a base, and tools such as jQuery, jQuery Mobile or Twitter Bootstrap. Also, I did some work on Android development, focusing on some crucial proofs of concept ideas.
+          </p>
+        </li>
+
+        <li class="experience--item">
+          <span class="experience--date">Jun 2010 - May 2011</span>
+          <p class="experience--place"><span>Yaco Sistemas SL</span></p>
+          <p class="experience--position">QA developer</p>
+          <p class="description experience--description">
+            As part of my job, I participated on some Django complex projects, where several system had to operate between them. For that, I wrote a lot of unit tests for each system, and also some integration tests, ensuring that the REST APIs was working properly. In addition, I also did some work as front-end testing, using tools like Selenium IDE.
+          </p>
+        </li>
+      </ul>
+    </section>
+
+    <section class="content--section skills">
+      <header class="content--section--header skills--header">
+        <h3 class="content--section--title">Skills</h3>
+      </header>
+
+      <div class="skills--section">
+        <h3 class="skills--section--title">Javascript</h3>
+        <ul class="skills--section--list">
+          <li class="skills--section--item">AngularJS</li>
+          <li class="skills--section--item">RequireJS</li>
+          <li class="skills--section--item">jQuery</li>
+          <li class="skills--section--item">OO Programming</li>
+          <li class="skills--section--item">BackboneJS</li>
+          <li class="skills--section--item">Jasmine</li>
+          <li class="skills--section--item">Karma</li>
+          <li class="skills--section--item">Grunt</li>
+          <li class="skills--section--item">Gulp</li>
+          <li class="skills--section--item">Unit Tests</li>
+          <li class="skills--section--item">E2E Tests</li>
+          <li class="skills--section--item">Modernizr</li>
+          <li class="skills--section--item">Canvas</li>
+          <li class="skills--section--item">ES6</li>
+        </ul>
       </div>
 
-      <div class="user-details">
-        <span class="user-details--location">{{user.location}}</span>
-        <span class="user-details--email">{{user.email}}</span>
-        <span class="user-details--url">{{user.url}}</span>
-        <span class="user-details--updated">{{user.updated}}</span>
+      <div class="skills--section">
+        <h3 class="skills--section--title">HTML/CSS</h3>
+        <ul class="skills--section--list">
+          <li class="skills--section--item">HTML5</li>
+          <li class="skills--section--item">SASS</li>
+          <li class="skills--section--item">FlexBox</li>
+          <li class="skills--section--item">LESS</li>
+          <li class="skills--section--item">CSS3</li>
+        </ul>
       </div>
 
-    </p> -->
+      <div class="skills--section">
+        <h3 class="skills--section--title">Backend</h3>
+        <ul class="skills--section--list">
+          <li class="skills--section--item">Python</li>
+          <li class="skills--section--item">Django</li>
+          <li class="skills--section--item">REST API</li>
+          <li class="skills--section--item">Unit Tests</li>
+          <li class="skills--section--item">Integration Tests</li>
+          <li class="skills--section--item">Wagtail</li>
+        </ul>
+      </div>
+
+      <div class="skills--section">
+        <h3 class="skills--section--title">Non-code skills</h3>
+        <ul class="skills--section--list">
+          <li class="skills--section--item">Git</li>
+          <li class="skills--section--item">Agile/Scrum</li>
+          <li class="skills--section--item">UX</li>
+          <li class="skills--section--item">Grow</li>
+        </ul>
+      </div>
+
+    </section>
+
+    <section class="content--section myself">
+      <header class="content--section--header myself--header">
+        <h3 class="content--section--title">About me!</h3>
+      </header>
+      <div class="myself--description">
+        <p class="myself--description--paragraph">I am a <span class="myself--description__highlight">music lover</span>. I enjoy all types of music but I what a love most is <span class="myself--description__highlight">rock & metal</span>. My favorite groups of all time include <span class="myself--description__highlight">Foo Fighters</span>, <span class="myself--description__highlight">Fall Out Boy</span> and <span class="myself--description__highlight">RHCP</span>.</p>
+
+        <p class="myself--description--paragraph">About a year ago I started to introduce myself to <span class="myself--description__highlight">fitness</span> again, as I've always been a sport lover, but this time I felt I needed something harder so now I'm a <span class="myself--description__highlight">crossfiter</span>.</p>
+
+        <p class="myself--description--paragraph">And.. I have to confess that I am a <span class="myself--description__highlight">food lover</span> which also loves <span class="myself--description__highlight">baking</span> however I don't practice it as much as I'd love! My favorite recipies to make are brownie and cheesecake.</p>
+
+     </div>
+    </section>
     
-    <section class="content--section github">
+    <!--section class="content--section github">
 
       <header class="content--section--header github--header">
         <h3 class="content--section--title">
@@ -137,7 +260,7 @@
         </li>
       </ul>
     </section>
-  </div>
+  </div -->
 
   <!-- FOOTER -->
   <footer class="footer">
