fix latest job experience

--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
 
       <ul class="content--section--list experience--list">
        <li class="experience--item">
-          <span class="experience--date">Jan 2015 - Present</span>
+          <span class="experience--date">Jan 2015 - Mar 2017</span>
           <p class="experience--place">
             <a class="experience--link" href="http://p.ota.to/" target="_blank">Potato Ltd</a>
           </p>
           <p class="experience--position">Frontend Developer</p>
           <p class="description experience--description">
-            At Potato, I am working on several different projects: from big web applications backend-heavy improving my knowledge in AngularJS as well as Python/Django to very light web pages maily frontend using latest features of CSS3, animations and also introducing ES6.
+            At Potato, I was working on several different projects: from big web applications backend and frontend heavy improving my knowledge in AngularJS as well as Python/Django to very light web pages maily frontend using latest features of CSS3, animations and also introducing ES6.
           </p>
         </li>
 
@@ -235,7 +235,7 @@
 
      </div>
     </section>
-    
+
     <!--section class="content--section github">
 
       <header class="content--section--header github--header">
