Added lucide for icons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         "react": "https://esm.sh/react",
         "react-dom/client": "https://esm.sh/react-dom/client",
         "tailwind-merge": "https://esm.sh/tailwind-merge",
-        "clsx": "https://esm.sh/clsx"
+        "clsx": "https://esm.sh/clsx",
+        "lucide-react": "https://esm.sh/lucide-react"
       }
     }
   </script>
