Components refactor. Improved styles. Added CV view and print version

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         "react-dom/client": "https://esm.sh/react-dom/client",
         "tailwind-merge": "https://esm.sh/tailwind-merge",
         "clsx": "https://esm.sh/clsx",
-        "lucide-react": "https://esm.sh/lucide-react"
+        "lucide-react": "https://esm.sh/lucide-react",
+        "react-router-dom": "https://esm.sh/react-router-dom",
+        "react-markdown": "https://esm.sh/react-markdown"
       }
     }
   </script>
